# CICD_project

./: CMakeLists.txt  Config.cmake.in  README.md  autoscript.sh  main.c  test_v2.py
.cache/clangd/index/: Chuongtrinhchinh.c.84D73246D279440B.idx
.github/workflows/: node.js.yml
components/testable/: CMakeLists.txt  STM32_Slave.c  STM32_comm.c
components/testable/include/: STM32_Slave.h  STM32_comm.h
components/testable/test/: Test_SPI.c
lib/: DemoLibrary.c
main/: CMakeLists.txt  Chuongtrinhchinh.c  usb_serial_echo_main.c
output_package/include/: DemoLibrary.h
output_package/lib/cmake/DemoLibrary/: DemoLibraryConfig.cmake
test/: CMakeLists.txt
test/main/: CMakeLists.txt  test.c
